# shellkick

./: .gitignore  .gitmodules  .luarc.json  Cargo.toml  flake.nix
script/: mario.lua
src/: luanim.rs  main.rs
