[package]
name = "shellkick"
version = "0.1.0"
edition = "2021"

[dependencies]
fastnes = { path = "fastnes" }
femtovg = { version = "0.6.0", features = ["glutin"] }
glutin = "0.30.7"
glutin-winit = "0.3.0"
notify = "5.1.0"
rand = "0.8.5"
raw-window-handle = "0.5.2"
rlua = "0.19.4"
spin_sleep = "1.1.1"
threadpool = "1.8.1"
winit = "0.28.3"
